--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cais Tech 2023 | Online</title>
   </head>
-  <body class="bg-no-repeat bg-cover bg-gradient-to-t from-[#11203b] to-[#111024] h-screen">
+  <body class="bg-gradient-to-t from-[#11203b] to-[#111024] h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
