--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Cais Tech 2023 | Online</title>
   </head>
-  <body class="bg-gradient-to-t from-[#11203b] to-[#111024] h-screen">
+  <body class="bg-[#111024] h-screen bg-cover">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
