--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     />
     <title>Cais Tech 2023 | Online</title>
   </head>
-  <body class="bg-[#111024] h-screen bg-cover">
+  <body class="bg-ctech-900 h-screen bg-cover">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-
-  
 </html>
