--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <title>Cais Tech 2023 | Online</title>
   </head>
-  <body class="bg-ctech-900 h-screen bg-cover">
+  <body class="bg-ctech bg-no-repeat h-screen bg-cover">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
