--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <div class="container">
           <div class="content-area">
             <div class="content-area-wrapper " >
-              <span hidden >Sejam Bem-vindos ao </span>
-              <h1 hidden class="t-1">CAISTECH 2023</h1>
-              <h6 hidden>O maior evento de tecnologia do Sul do Piauí.</h6>
+              <span  >Sejam Bem-vindos ao </span>
+              <h1 class="t-1">CAISTECH 2023</h1>
+              <h6>O maior evento de tecnologia do Sul do Piauí.</h6>
               <div hidden class="buttons">
                 <a
                   class="btn btn-main"
@@ -245,14 +245,14 @@
                 <span>31 de Maio de 2023</span>
               </button>
               <button class="btn tab-links b2" onclick="OpenTab(event, 'Two')">
-                <p>Terça-Feira</p>
+                <p>Quinta-Feira</p>
                 <span>01 de Junho de 2023</span>
               </button>
               <button
                 class="btn tab-links b3"
                 onclick="OpenTab(event, 'Three')"
               >
-                <p>Quarta-Feira</p>
+                <p>Sexta-Feira</p>
                 <span>02 de Junho de 2023</span>
               </button>
             </div>
