--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li><a href="#contact">Contato</a></li>
                 <li>
                   <a
-                    href=""
+                    href="https://docs.google.com/forms/d/e/1FAIpQLScU1R14Y2GwxkAmb2YPd7M3i3tN_V5IttFEupHDcj9FS6cUVw/viewform"
                     class="btn-ticket"
                     target="_blank"
                     >Inscreva-se</a
@@ -93,7 +93,7 @@
           <li><a href="#questions" onclick="closeNav()">Perguntas</a></li>
           <li><a href="#contact" onclick="closeNav()">Contato</a></li>
           <li>
-            <a href="" target="_blank" class="btn-ticket">Inscreva-se</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScU1R14Y2GwxkAmb2YPd7M3i3tN_V5IttFEupHDcj9FS6cUVw/viewform" target="_blank" class="btn-ticket">Inscreva-se</a>
           </li>
         </div>
       </header>
@@ -1825,9 +1825,9 @@
                     src="/src/assets/SOLAR-SUPPORT.png"
                     alt=""
                 /></a>
-                <!-- SOLAR AI Q FOME -->
+                <!-- AI Q FOME -->
                 <a
-                  href="https://www.instagram.com/lojasdragaofloriano/"
+                  href="https://www.instagram.com/aiqfome/"
                   target="_blank"
                   ><img
                     style="width: 250px"
@@ -1835,7 +1835,7 @@
                     alt=""
                 /></a>
 
-                <!-- SOLAR DIVA STORE -->
+                <!-- DIVA STORE -->
                 <a
                   href="https://www.instagram.com/divastoreflo/"
                   target="_blank"
@@ -1845,9 +1845,9 @@
                     alt=""
                 /></a>
 
-                <!-- SOLAR CARVALHO FERREIRA -->                
+                <!-- CARVALHO FERREIRA -->                
                 <a
-                  href="https://www.instagram.com/divastoreflo/"
+                  href="https://instagram.com/cfassessoriacontabil?igshid=YmMyMTA2M2Y="
                   target="_blank"
                   ><img
                     style="width: 250px"
