--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </nav>
         </div>
       </section>
-      <!-- section wrapper -->
+      <!-- COVER -->
       <div  id="cover">
               <!-- SLIDER -->
         <div class="slider">
@@ -93,7 +93,7 @@
           <!-- FIM IMG -->
 
           <!-- SLIDE NAVIGATION -->
-          <div class="navigation-auto">
+          <div hidden class="navigation-auto">
             <div class="auto-btn1"></div>
             <div class="auto-btn2"></div>
             <div class="auto-btn3"></div>
@@ -114,6 +114,7 @@
 
       </div>
       </div>
+      <!-- section wrapper -->
       <header class="wrapper" id="wrapper" >
         <div class="container">
           <div class="content-area">
@@ -149,9 +150,6 @@
           </li>
         </div>
       </header>
-
-
-
 
       <section class="event-register" hidden>
         <div class="container">
