add curso, progr e pales

--- a/index.html
+++ b/index.html
@@ -970,21 +970,18 @@
                 </div>
               </div>
 
-              <div class="col-md col-lg" hidden>
+              <div class="col-md col-lg" >
                 <div class="card card-guests">
                   <div class="card-img-box">
                     <img
-                      src="/src/assets/palestrantes/Eric Spangler.webp"
+                      src="src/assets/caisTech2023/mesaRedonda/Silvo.svg"
                       alt=""
                     />
                   </div>
                   <div class="card-body guests-info">
-                    <h3>Eric Spangler</h3>
+                    <h3>Silvino Marques da Silva Júnior</h3>
                     <p>
-                      Professor PhD da Universidade Lewis (Romeoville, Illinois,
-                      EUA) nas áreas de Engenharia, Informática e Ciências
-                      Matemáticas onde atua com Mobile Forensics, Cisco Courses,
-                      Linux, Cybersecurity, Digital Forensics, Pen Testing.
+                      Professor de Educação Básica, Técnica e Tecnológica do Instituto Federal do Piauí - Campus Floriano, na área de Tecnologia da Informação e Comunicação. Mestre em Tecnologia e Gestão em Educação a Distância pela Universidade Federal Rural de Pernambuco. Possui graduação em Tecnologia de Sistemas de Informação pelo Instituto Federal do Piauí (2008), graduação em Licenciatura Plena em Computação pela Universidade Estadual do Piauí (2012). Tem experiência na área de Ciência da Computação, com ênfase em Uso de Tecnologias no Ensino, Educação a Distância e Segurança da Informação.
                     </p>
                   </div>
                 </div>
@@ -1024,12 +1021,15 @@
                 <h2>Quem irá ministrar</h2>
               </div>
             </div>
+
             <div class="row" >
+
+              <!-- ANALISE DE DADOS COM POWER BI -->
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
                     <img
-                      src="/src/assets/caisTech2023/minicursos/powerBi.jpg"
+                      src="/src/assets/caisTech2023/minicursos/Power-BI.jpg"
                       alt=""
                     />
                   </div>
@@ -1050,10 +1050,12 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class="col-md col-lg">
+
+              <!-- VISÃO COMPUTACIONAL  -->
+              <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
-                    <img src="/src/assets/minicursos/api-rest.svg" alt="" />
+                    <img src="src/assets/caisTech2023/minicursos/Vc.jpg" alt="" />
                   </div>
                   <div class="social-info">
                     <a href="#" target="_blank">
@@ -1061,20 +1063,20 @@
                     </a>
                   </div>
                   <div class="course-info">
-                    <h3>Matheus Sales Torres dos Santos Silva</h3>
-                    <h5>Criação e deploy de uma API REST com NodeJs</h5>
+                    <h3>Justino Santos</h3>
+                    <h5>VISÃO COMPUTACIONAL COM REDES NEURAIS CONVOLUCIONAIS</h5>
                     <p>
-                      O minicurso tem como objetivo ensinar a manipulação de
-                      APIs utilizando Node JS, Banco de dados relacional e
-                      publicar a aplicação em uma hospedagem real.
+                      O minicurso tem como objetivo fornecer uma compreensão prática e teórica da aplicação de técnicas de CNN em problemas de visão computacional, permitindo que os participantes desenvolvam habilidades para aplicar essa tecnologia .
                     </p>
                   </div>
                 </div>
               </div>
+
+              <!-- CÓDIGO CLARO E TESTADO: NODEJS -->
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
-                    <img src="/src/assets/minicursos/figma.svg" alt="" />
+                    <img src="src/assets/caisTech2023/minicursos/Nodejs.jpg" alt="" />
                   </div>
                   <div class="social-info">
                     <a href="#" target="_blank">
@@ -1083,25 +1085,46 @@
                   </div>
                   <div class="course-info">
                     <h3>
-                      Maria Klara S. R. de Oliveira & Vanessa de Sousa Rodrigues
+                      Jakson Xavier
                     </h3>
-                    <h5>Desenvolvendo Layouts do zero com FIGMA</h5>
+                    <h5>Código Claro e Testado: Melhores Práticas com Node.Js V18</h5>
                     <p>
-                      O minicurso tem como objetivo realizar uma introdução
-                      sobre a ferramenta de design FIGMA e ensinar técnicas de
-                      forma prática sobre essa ferramenta. Ao final do
-                      minicurso, espera-se que os alunos possam desenvolver
-                      layouts de sites de forma criativa e interativa.
+                      O minicurso tem como objetivo fornecer aos participantes as habilidades e conhecimentos necessários para escrever código de alta qualidade e fácil de manter em Node.js e as melhores práticas de desenvolvimento de software para criar aplicativos escaláveis e de alta performance.
                     </p>
                   </div>
                 </div>
               </div>
+
+              <!-- REST API COM DJANGO -->
+              <div class="col-md col-lg">
+                <div class="card-courses">
+                  <div class="card-img-box">
+                    <img src="src/assets/caisTech2023/minicursos/ApiDjango.jpg" alt="" />
+                  </div>
+                  <div class="social-info">
+                    <a href="#" target="_blank">
+                      <i class="bx bxl-instagram"></i>
+                    </a>
+                  </div>
+                  <div class="course-info">
+                    <h3>Luís Henrique R. Bueno</h3>
+                    <h5>Do 0 ao Deploy, construindo uma REST API com Django e DRF</h5>
+                    <p>
+                      Um Minicurso que visa fornecer aos participantes as habilidades e conhecimentos necessários para desenvolver e implantar uma API RESTful utilizando o Django e o DRF.E aprenderão a aplicar as melhores práticas de desenvolvimento de software em Django e DRF, incluindo autenticação e autorização, testes automatizados e implantação em produção.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
             </div>
+
             <div class="row pt-4">
+
+              <!-- DESENVOLVIMENTO ASSEMBLY PARA UBUNTU -->
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
-                    <img src="/src/assets/minicursos/django-rest.svg" alt="" />
+                    <img src="src/assets/caisTech2023/minicursos/Assembly.jpg" alt="" />
                   </div>
                   <div class="social-info">
                     <a href="#" target="_blank">
@@ -1109,21 +1132,20 @@
                     </a>
                   </div>
                   <div class="course-info">
-                    <h3>Marcus Vinicius, Juliane Messias e Elias Araújo</h3>
-                    <h5>Introdução a Django Rest Framework com Python</h5>
+                    <h3 style="margin-top: -18px">André Luís Neves</h3>
+                    <h5>Desenvolvimento Assembly Para Ubuntu</h5>
                     <p>
-                      Um Minicurso que visa trazer uma introdução de como é
-                      feita a construção de APIs REST utilizando a estrutura do
-                      Django, e que gere compreensão do público alvo sobre os
-                      fundamentos do framework e de seu funcionamento.
+                      O minicurso tem como objetivo fornecer aos participantes habilidades e conhecimentos para desenvolver aplicativos em Assembly para o sistema operacional Ubuntu. E a escrever código em Assembly, interagir com o sistema operacional Ubuntue  realizar tarefas específicas.
                     </p>
                   </div>
                 </div>
               </div>
+              
+              <!-- SOCIEDADE EM REDE -->
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
-                    <img src="/src/assets/minicursos/ricardo.svg" alt="" />
+                    <img src="src/assets/caisTech2023/minicursos/SociedadeRede.jpg" alt="" />
                   </div>
                   <div class="social-info">
                     <a href="#" target="_blank">
@@ -1131,45 +1153,21 @@
                     </a>
                   </div>
                   <div class="course-info">
-                    <h3 style="margin-top: -18px">RICARDO MARTINS RAMOS</h3>
-                    <h5>Bioinformática com Ricardo Martins</h5>
-                    <p>
-                      No minicurso será trabalhado os conceitos básicos de
-                      Bioinformática e Bioinformatica Estrutural na prática
-                      utilizando plataformas online, ferramentas e softwares.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md col-lg">
-                <div class="card-courses">
-                  <div class="card-img-box">
-                    <img src="/src/assets/minicursos/com017.jpg" alt="" />
-                  </div>
-                  <div class="social-info">
-                    <a href="#" target="_blank">
-                      <i class="bx bxl-instagram"></i>
-                    </a>
-                  </div>
-                  <div class="course-info">
-                    <h3>Iago Bezerra, Emanuela de Jesus e Ricardo Félix</h3>
+                    <h3>Marcus Vinícius Barbosa</h3>
                     <h5>
-                      Utilizando nodejs para realizar integração com o banco de
-                      dados
+                      A sociedade em rede: cenários distópicos e perspectivas sociológicas contemporâneas
                     </h5>
                     <p>
-                      Neste minicurso tem como objetivo introduzir NodeJS
-                      integrados ao banco de dados postegresql utilizando Design
-                      que atualmente é mais utilizado no mercado de trabalho MVC
-                      (Model, View e controller) onde serão utilizados alguns
-                      templates engine para realizar a reutilização de código
-                      para o front-end.
+                      Esse minicurso tem como objetivo oferecer ferramentas para compreender as transformações sociais e culturais decorrentes do desenvolvimento tecnológico e da internet, refletir criticamente sobre seus impactos e identificar as perspectivas sociológicas que podem ajudar a explicar esses processos.
                     </p>
                   </div>
                 </div>
               </div>
+
             </div>
-            <div class="row pt-4">
+
+            <div hidden class="row pt-4">
+
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
@@ -1193,6 +1191,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
@@ -1217,6 +1216,7 @@
                   </div>
                 </div>
               </div>
+              
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
@@ -1241,8 +1241,10 @@
                   </div>
                 </div>
               </div>
+
             </div>
-            <div class="row pt-4">
+
+            <div hidden class="row pt-4">
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
@@ -1268,6 +1270,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
@@ -1292,6 +1295,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-md col-lg">
                 <div class="card-courses">
                   <div class="card-img-box">
@@ -1316,7 +1320,8 @@
                   </div>
                 </div>
               </div>
-            </div> -->
+
+            </div>
           </div>
         </div>
       </section>
