--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@
 
             </div>
 
-            <div hidden class="row pt-4">
+            <!-- <div hidden class="row pt-4">
 
               <div class="col-md col-lg">
                 <div class="card-courses">
@@ -1321,7 +1321,7 @@
                 </div>
               </div>
 
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
