--- a/index.html
+++ b/index.html
@@ -525,6 +525,29 @@
                 </div>
               </div>
 
+              <!-- APRESENTAÇÃO DOS PROJETOS INTEGRADORES -->
+              <div class="day-box" >
+                <div class="profile-box">
+                  <div class="avatar">
+                    <img
+                      src="/src/assets/minicursos/workshop.svg"
+                      alt="Imagem do Palestrante"
+                    />
+                  </div>
+                  <h3>ORGANIZAÇÃO CAISTECH</h3>
+                </div>
+                <div class="info-box">
+                  <div class="type">
+                    <span>Workshop</span>
+                  </div>
+                  <span>16:00 - 18:00</span>
+                  <h3>WPI - Workshop de Projetos Integradores e TCCs</h3>
+                  <p>
+                    O WPI (Workshop de Projetos Integradores e TCCs) é um evento voltado para a criação e desenvolvimento de projetos que promovam a integração entre os cursos de graduação e pós-graduação da Universidade Federal do Piauí (IFPI). O objetivo do workshop é proporcionar um ambiente de aprendizado colaborativo e interdisciplinar, no qual os participantes possam compartilhar conhecimentos e experiências para aprimorar suas habilidades na elaboração de projetos integradores e TCCs.
+                  </p>
+                </div>
+              </div>
+
               <!-- CREDENCIAMENTO ETAPA 03 -->
               <div class="day-box" >
                 <div class="profile-box">
@@ -543,60 +566,34 @@
                 </div>
               </div>
 
-              <!-- PALESTRA POWER BI -->
+              <!-- PALESTRA CHAT GPT -->
               <div class="day-box green-hover">
                 <div class="profile-box">
                   <div class="avatar">
                     <img
-                      src="src/assets/caisTech2023/palestrantes/chatGpt.avif"
+                      src="src/assets/caisTech2023/palestrantes/Gabriel Buzzi 2.jpg"
                       alt="Imagem do Apresetador"
                     />
                   </div>
-                  <h3>...</h3>
+                  <h3>Gabriel Buzzi</h3>
                 </div>
                 <div class="info-box">
                   <div class="type">
-                    <span>Palestra Chat GPT</span>
+                    <span>Palestra</span>
                   </div>
                   <span> 19:00 - 20:00 </span>
-                  <h3>...</h3>
+                  <h3>Como acelerar seu produto com a API do GPT</h3>
                   <p>
-                    ...
+                    A API do GPT é uma ferramenta poderosa para acelerar o desenvolvimento de produtos em diversas áreas. Ao utilizar a plataforma, é possível criar modelos de linguagem precisos e eficientes, gerar textos de forma automatizada e melhorar a eficiência e velocidade do processo de desenvolvimento. 
                   </p>
                 </div>
               </div>
-
+<!-- 
               <div class="day-box" hidden>
                 <div class="profile-box">
                   <div class="avatar">
                     <img
-                      src="/src/assets/minicursos/redes.svg"
-                      alt="Imagem do Palestrante"
-                    />
-                  </div>
-                  <h3>GUILHERME FRANCISCO DIAS</h3>
-                </div>
-                <div class="info-box">
-                  <div class="type">
-                    <span>Minicusro</span>
-                  </div>
-                  <span>06/07/2023 - 14:00 - 17:00</span>
-                  <h3>Introdução a Redes e Segurança</h3>
-                  <p>
-                    O curso tem por objetivo instruir os alunos participantes
-                    aos conceitos iniciais na área de Redes e de Segurança da
-                    Informação, com intuito de esclarecer os termos
-                    introdutórios e algumas tecnologias que são base dessas
-                    matérias.
-                  </p>
-                </div>
-              </div>
-
-              <div class="day-box" hidden>
-                <div class="profile-box">
-                  <div class="avatar">
-                    <img
-                      src="/src/assets/minicursos/xadrez.webp"
+                      src=""
                       alt="Imagem do Ministrante"
                     />
                   </div>
@@ -609,31 +606,6 @@
                   <span>06/07/2023 - 14:00 - 18:00</span>
                   <h3>Campeonato de Xadrez</h3>
                   <p></p>
-                </div>
-              </div>
-
-              <div class="day-box" hidden>
-                <div class="profile-box">
-                  <div class="avatar">
-                    <img
-                      src="/src/assets/minicursos/workshop.svg"
-                      alt="Imagem do Palestrante"
-                    />
-                  </div>
-                  <h3>ORGANIZAÇÃO CAISTECH</h3>
-                </div>
-                <div class="info-box">
-                  <div class="type">
-                    <span>Workshop</span>
-                  </div>
-                  <span>06/07/2023 - 14:00 - 18:00</span>
-                  <h3>WPI - Workshop de Projetos Integradores e TCCs</h3>
-                  <p>
-                    O Workshop de Projetos Integradores e TCCs (WPI) é um evento
-                    que visa ao desenvolvimento de projetos de integração entre
-                    os cursos de graduação e pós-graduação da Universidade
-                    Federal do Piauí (IFPI).
-                  </p>
                 </div>
               </div>
 
@@ -719,7 +691,7 @@
                     trilhas/caminhos a seguir na área de TI.
                   </p>
                 </div>
-              </div>
+              </div> -->
 
             </div>
             <a
@@ -773,31 +745,27 @@
                 </div>
               </div>
             </div>
-            <!-- <div
+            <div
               class="row mb-5 d-flex justify-content-between card-speaker a-1 grid"
             >
               <div class="col-md-7 pt-4 pr-5 info-speaker s-1 infos">
-                <h2>Valeska Uchôa</h2>
+                <h2>Gabriel Buzzi</h2>
                 <div class="bio-speaker b-2">
-                  <span>Roda de Conversa com as Pyladies THE</span>
+                  <span>Como acelerar seu produto com a API do GPT.</span>
                   <p>
-                    Desenvolvedora Machine Learning no Instituto de Pesquisas
-                    Eldorado, Mestra em Ciência da Computação pela Universidade
-                    Federal do Piauí e Doutoranda em Informática na Universidade
-                    de Brasília. Tem vasta experiência em Processamento Digital
-                    de Imagens e Visão Computacional.
+                    Programador há mais de 11 anos, Cristão e apaixonado por tecnologia e resolver problemas. O seu propósito é ajudar devs a desenvolverem sua carreira, mostrando que nem só de código vive um programador.
                   </p>
                   <div class="speaker-links">
                     <h6>Redes Sociais</h6>
                     <div class="d-flex links">
-                      <a href="" target="_blank"
+                      <a href="https://www.instagram.com/gabrielbuzzi/" target="_blank"
                         ><i class="bx bxl-instagram"></i
                       ></a>
-                      <a href="" target="_blank"
+                      <a href="https://www.linkedin.com/in/gabrielbuzziv/" target="_blank"
                         ><i class="bx bxl-linkedin"></i
                       ></a>
-                      <a href="" target="_blank"
-                        ><i class="bx bxl-facebook"></i
+                      <a href="https://github.com/gabrielbuzziv" target="_blank"
+                        ><i class="bx  bxl-github"></i
                       ></a>
                     </div>
                   </div>
@@ -805,11 +773,12 @@
               </div>
               <div class="col-md-5 col-lg-5 speaker-img s-2 img">
                 <img
-                  src="/src/assets/palestrantes/Valeska Uchôa - Palestra PyLadies THE.webp"
+                  src="src/assets/caisTech2023/palestrantes/Gabriel Buzzi 3.jpg"
                   alt="palestrante"
                 />
               </div>
             </div>
+<!-- 
             <div class="row mb-5 d-flex justify-content-between card-speaker">
               <div class="col-md-5 col-lg-5 speaker-img">
                 <img
@@ -845,6 +814,7 @@
                 </div>
               </div>
             </div>
+
             <div
               class="row mb-5 d-flex justify-content-between card-speaker a-1 grid"
             >
@@ -881,6 +851,7 @@
                 />
               </div>
             </div>
+
             <div class="row mb-5 d-flex justify-content-between card-speaker">
               <div class="col-md-5 col-lg-5 speaker-img">
                 <img
@@ -917,6 +888,7 @@
                 </div>
               </div>
             </div> -->
+
           </div>
         </div>
       </section>
@@ -1564,7 +1536,7 @@
       <a href="#wrapper" id="btn-fixed"><i class="bx bx-up-arrow-alt"></i></a>
     </main>
     <script type="text/javascript" src="./src/js/slide.js" ></script>
-    <script type="text/javascript" src="./src/js/countdown.js"></script>
+    <!-- <script type="text/javascript" src="./src/js/countdown.js"></script> -->
     <script type="text/javascript" src="./src/js/sidenav.js"></script>
     <script type="text/javascript" src="./src/js/tab.js"></script>
     <script type="text/javascript" src="./src/js/collapse.js"></script>
